@@ -1,4 +1,5 @@
 Add option to make your own font small
+Separate changing nickname and password
 
 Version 1.22.1 - Nov. 13, 2016
 Performance optimizations
